fix: [SOCKETDEV-2] websocket server now officially connects

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sockets-practice-node-express",
   "version": "1.0.0",
   "description": "learning websockets",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "dev": "nodemon src/index.ts"
   },
   "author": "Carlos Pinto",
