--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Carlos Pinto",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "sockets-practice-node-express": "file:",
